--- a/abt/aboutme.html
+++ b/abt/aboutme.html
@@ -7,15 +7,15 @@
 <html>
 <head>
     <title>Yoru</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="logo6.png" class="logo">
+            <img src="/resources/logo6.png" class="logo">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="information.html">Information</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/abt/aboutme.html">About me</a></li>
             </ul>
         </div>
         <div class="content">
