--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <img src="logo6.png" class="logo">
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/abt/aboutme.html">About me</a></li>
+                <li><a href="/aboutme.html">About me</a></li>
             </ul>
         </div>
         <div class="content">
-            <h1>About me!</h1>
+            <h1>Welcome to the Yoru's website!</h1>
             <p>Maybe u want to add my bot to your server or you just came here for nothing?</p>
             <div>
                 <button type="button" onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1532736437751&scope=bot';"><span></span>Invite my bot</button>
