--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
             <img src="/resources/logo6.png" class="logo">
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/abt/aboutme.html">About me</a></li>
+                <li><a href="/aboutme.html">About me</a></li>
             </ul>
         </div>
         <div class="content">
