--- a/aboutme.html
+++ b/aboutme.html
@@ -19,8 +19,8 @@
             </ul>
         </div>
         <div class="content">
-            <h1>Welcome to the Yoru's website!</h1>
-            <p>Maybe u want to add my bot to your server or you just came here for nothing?</p>
+            <h1>About me!</h1>
+            <p>Hello, my name is Charlie! I am just an student who likes to code and try new things.<br>My current projects is Akia and this website!<br>If u have something that I could add to my website or change,<br>send me a mail!</p>
         </div>
     </div>
 </body>
