--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,7 @@
 <html>
 <head>
     <title>Yoru</title>
+    <link rel="icon" href="/resources/bulma.gif">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
