--- a/aboutme.html
+++ b/aboutme.html
@@ -7,13 +7,13 @@
 <html>
 <head>
     <title>Yoru</title>
-    <link rel="icon" href="/resources/bulma.gif">
+    <link rel="icon" href="bulma.gif">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="/resources/logo6.png" class="logo">
+            <img src="logo6.png" class="logo">
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/aboutme.html">About me</a></li>
