--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="logo6.png" class="logo">
+            <img src="logo.png" class="logo">
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/aboutme.html">About me</a></li>
