--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <title>Yoru</title>
-    <link rel="icon" href="bulma.gif">
+    <link rel="shortcut icon" href="/bulma.gif">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
