--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <title>Yoru</title>
-    <link rel="icon" href="/resources/bulma.gif" type="image/gif">
+    <link rel="icon" href="/resources/icon.png" type="image/png">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
