--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <html>
 <head>
     <title>Yoru</title>
+    <meta property="og:title" content="Yoru">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="I am just an student who likes to code and try new things.">
+    <meta property="og:image" content="/resources/icon.png">
     <link rel="icon" href="/resources/icon.png" type="image/icon">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
