--- a/aboutme.html
+++ b/aboutme.html
@@ -1,14 +1,15 @@
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-</head>
-
 <html>
 <head>
     <title>Yoru</title>
+    <meta property="og:title" content="Yoru">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="I am just an student who likes to code and try new things.">
+    <meta property="og:image" content="/resources/icon.png">
     <link rel="icon" href="/resources/icon.png" type="image/icon">
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="banner">
