--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Yoru</title>
+    <link rel="icon" href="/resources/icon.png" type="image/icon">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
