--- a/index.html
+++ b/index.html
@@ -30,5 +30,21 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="footer-content">
+            <h3>123</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo iste corrupti doloribus
+            odio sed!</p>
+            <ul class="Socials">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></1i>
+                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube"></i</a></li>
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
+
+
