--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
 <body>
     <div class="banner">
@@ -32,16 +33,16 @@
     </div>
     <footer>
         <div class="footer-content">
-            <h3>123</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo iste corrupti doloribus
-            odio sed!</p>
+            <h3>Yoru</h3>
+            <p>Here's some of my socials!</p>
             <ul class="Socials">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></1i>
-                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                <li><a href="#"><i class="fa fa-youtube"></i</a></li>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://discord.com/users/670986272377929743"><i class="fa fa-discord"></i></a></li>
+                <li><a href="https://twitter.com/Nifel18"><i class="fa fa-twitter"></i></a></1i>
+                <li><a href="https://www.instagram.com/szefiroyoru/"><i class="fa fa-instagram"></i</a></li>
             </ul>
+            <div class="footer-bottom">
+                <p>szefiro yoru#6838 &copy; 2022</p>
+            </div>
         </div>
     </footer>
 </body>
