--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <h3>Yoru</h3>
             <p>Here's some of my socials!</p>
             <ul class="Socials">
-                <li><a href="https://discord.com/users/670986272377929743"><i class="fa fa-discord">Discord</i></a></li>
-                <li><a href="https://twitter.com/Nifel18"><i class="fa fa-twitter">Twitter</i></a></1i>
-                <li><a href="https://www.instagram.com/szefiroyoru/"><i class="fa fa-instagram">Instagram</i</a></li>
+                <li><a href="https://discord.com/users/670986272377929743"><i class="fa fa-discord"></i></a></li>
+                <li><a href="https://twitter.com/Nifel18"><i class="fa fa-twitter"></i></a></1i>
+                <li><a href="https://www.instagram.com/szefiroyoru/"><i class="fa fa-instagram"></i</a></li>
             </ul>
             <div class="footer-bottom">
                 <p>szefiro yoru#6838 © 2022</p>
