--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yoru</title>
     <meta property="og:title" content="Yoru">
     <meta property="og:type" content="website">
