--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="footer-content">
             <h3>Yoru</h3>
             <p>Here's some of my socials!</p>
-            <ul class="Socials">
+            <ul class="socials">
                 <li><a href="https://discord.com/users/670986272377929743"><i class="fa fa-discord"></i></a></li>
                 <li><a href="https://twitter.com/Nifel18"><i class="fa fa-twitter"></i></a></1i>
                 <li><a href="https://www.instagram.com/szefiroyoru/"><i class="fa fa-instagram"></i</a></li>
