--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <li><a href="https://twitter.com/Nifel18">Twitter</i></a></1i>
                 <li><a href="https://www.instagram.com/szefiroyoru/">Instagram</i</a></li>
             </ul>
+        </div>
             <div class="footer-bottom">
                 <p>szefiro yoru#6838 © 2022</p>
             </div>
