--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
     </div>
     <footer>
         <div class="footer-content">
-            <h3>Yoru</h3>
-            <p>Here's some of my socials!</p>
+            <h3>Here's some of my socials!</h3>
             <ul class="socials">
                 <li><a href="https://discord.com/users/670986272377929743">Discord</i></a></li>
                 <li><a href="https://twitter.com/Nifel18">Twitter</i></a></1i>
@@ -43,7 +42,7 @@
             </ul>
         </div>
         <div class="footer-bottom">
-                <p>szefiro yoru#6838 © 2022</p>
+            <p>szefiro yoru#6838 &copy;2022</p>
         </div>
     </footer>
 </body>
