--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h3>Here's some of my socials!</h3>
             <ul class="socials">
                 <li><a href="https://discord.com/users/670986272377929743">Discord</i></a></li>
-                <li><a href="https://twitter.com/Nifel18">Twitter</i></a></1i>
+                <li><a href="https://twitter.com/Nifel18">Twitter</i></a></li>
                 <li><a href="https://www.instagram.com/szefiroyoru/">Instagram</i</a></li>
             </ul>
         </div>
