--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul class="socials">
                 <li><a href="https://discord.com/users/670986272377929743">Discord</i></a></li>
                 <li><a href="https://twitter.com/Nifel18">Twitter</i></a></li>
-                <li><a href="https://www.instagram.com/szefiroyoru/">Instagram</i</a></li>
+                <li><a href="https://www.instagram.com/szefiroyoru">Instagram</i></a></li>
             </ul>
         </div>
         <div class="footer-bottom">
