--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div class="footer-content">
             <h3>Here's some of my socials!</h3>
             <ul class="socials">
-                <li><a href="https://discord.com/users/670986272377929743">Discord</i></a></li>
-                <li><a href="https://twitter.com/Nifel18">Twitter</i></a></li>
-                <li><a href="https://www.instagram.com/szefiroyoru">Instagram</i></a></li>
+                <li><a href="https://discord.com/users/670986272377929743">Discord</a></li>
+                <li><a href="https://twitter.com/Nifel18">Twitter</a></li>
+                <li><a href="https://www.instagram.com/szefiroyoru">Instagram</a></li>
             </ul>
         </div>
         <div class="footer-bottom">
