--- a/aboutme.html
+++ b/aboutme.html
@@ -25,5 +25,18 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="footer-content">
+            <h3>Here's some of my socials!</h3>
+            <ul class="socials">
+                <li><a href="https://discord.com/users/670986272377929743">Discord</a></li>
+                <li><a href="https://twitter.com/Nifel18">Twitter</a></li>
+                <li><a href="https://www.instagram.com/szefiroyoru">Instagram</a></li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>szefiro yoru#6838 &copy; 2022</p>
+        </div>
+    </footer>
 </body>
 </html>
