--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="follower">
+        <div id="circle1"></div>
+        <div id="circle2"></div>
+    </div>
     <div class="banner">
         <div class="navbar">
             <img src="/resources/logo.png" class="logo">
