--- a/aboutme.html
+++ b/aboutme.html
@@ -19,6 +19,7 @@
         <div id="circle1"></div>
         <div id="circle2"></div>
     </div>
+        <script  src="/script.js"></script>
     <div class="banner">
         <div class="navbar">
             <img src="/resources/logo.png" class="logo">
