--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </ul>
         </div>
         <div class="footer-bottom">
-            <p>szefiro yoru#6838 &copy; 2022</p>
+            <a href="https://discord.com/users/670986272377929743">szefiro yoru#6838 &copy; 2022</a>
         </div>
     </footer>
 </body>
