--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Yoru</title>
     <meta property="og:title" content="Yoru">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="I am just an student who likes to code and try new things.">
+    <meta property="og:description" content="I am just a student who likes to code and try new things.">
     <meta property="og:image" content="/resources/icon.png">
     <meta property="og:url" content="https://szefiroyoru.github.io/">
     <link rel="icon" href="/resources/icon.png" type="image/icon">
