--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
     <title>Yoru</title>
     <meta property="og:title" content="Yoru">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="I am just an student who likes to code and try new things.">
+    <meta property="og:description" content="I am just a student who likes to code and try new things.">
     <meta property="og:image" content="/resources/icon.png">
     <meta property="og:url" content="https://szefiroyoru.github.io/">
     <link rel="icon" href="/resources/icon.png" type="image/icon">
@@ -25,7 +25,7 @@
         </div>
         <div class="content">
             <h1>About me!</h1>
-            <p>Hello, my name is Charlie! I am just an student who likes to code and try new things.<br>My current projects is Akia and this website!<br>If u have something that I could add to my website or change,<br>send me a message on instagram!</p>
+            <p>Hello, my name is Charlie! I am just a student who likes to code and try new things..<br>My current projects is Akia and this website!<br>If u have something that I could add to my website or change,<br>send me a message on instagram!</p>
             <div>
                 <button type="button" onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1532736437751&scope=bot';"><span></span>Invite Akia</button>
                 <button type="button" onclick="window.location.href = 'https://www.instagram.com/szefiroyoru/';"><span></span>Send me a message</button>
