--- a/aboutme.html
+++ b/aboutme.html
@@ -3,11 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yoru</title>
-    <meta property="og:title" content="Yoru">
+    <meta property="og:title" content="Moon">
     <meta property="og:type" content="website">
     <meta property="og:description" content="I am just a student who likes to code and try new things.">
-    <meta property="og:image" content="/resources/icon.png">
-    <meta property="og:url" content="https://szefiroyoru.github.io/">
+    <meta property="og:image" content="/resources/moon.jpg">
+    <meta property="og:url" content="moon.github.io">
     <link rel="icon" href="/resources/icon.png" type="image/icon">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="/resources/logo.png" class="logo">
+            <img src="/resources/moon.jpg" class="logo">
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/aboutme.html">About me</a></li>
@@ -28,7 +28,7 @@
             <p>Hello, my name is Charlie! I am just a student who likes to code and try new things..<br>My current projects is Akia and this website!<br>If u have something that I could add to my website or change,<br>send me a message on instagram!</p>
             <div>
                 <button type="button" onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1532736437751&scope=bot';"><span></span>Invite Akia</button>
-                <button type="button" onclick="window.location.href = 'https://www.instagram.com/szefiroyoru/';"><span></span>Send me a message</button>
+                <button type="button" onclick="window.location.href = 'https://www.instagram.com/be_real_moon/';"><span></span>Send me a message</button>
             </div>
         </div>
     </div>
@@ -38,11 +38,11 @@
             <ul class="socials">
                 <li><a href="https://discord.com/users/670986272377929743">Discord</a></li>
                 <li><a href="https://twitter.com/Nifel18">Twitter</a></li>
-                <li><a href="https://www.instagram.com/szefiroyoru">Instagram</a></li>
+                <li><a href="https://www.instagram.com/be_real_moon/">Instagram</a></li>
             </ul>
         </div>
         <div class="footer-bottom">
-            <p>szefiro yoru#6838 &copy; 2022</p>
+            <a href="https://discord.com/users/670986272377929743">Moon.#6838 &copy; 2022</a>
         </div>
     </footer>
 </body>
