--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yoru</title>
+    <title>Moon</title>
     <meta property="og:title" content="Moon">
     <meta property="og:type" content="website">
     <meta property="og:description" content="I am just a student who likes to code and try new things.">
     <meta property="og:image" content="/resources/moon.jpg">
-    <meta property="og:url" content="moon.github.io">
+    <meta property="og:url" content="https://berealmoon.github.io/">
     <link rel="icon" href="/resources/icon.png" type="image/icon">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
