--- a/aboutme.html
+++ b/aboutme.html
@@ -25,7 +25,7 @@
         </div>
         <div class="content">
             <h1>About me!</h1>
-            <p>Hello, my name is Charlie! I am just a student who likes to code and try new things..<br>My current projects is Akia and this website!<br>If u have something that I could add to my website or change,<br>send me a message on instagram!</p>
+            <p>Hello, my name is Charlie! I am just a student who likes to code and try new things..<br>My current projects are Akia and this website!<br>If u have something that I could add to my website or change,<br>send me a message on instagram!</p>
             <div>
                 <button type="button" onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1532736437751&scope=bot';"><span></span>Invite Akia</button>
                 <button type="button" onclick="window.location.href = 'https://www.instagram.com/be_real_moon/';"><span></span>Send me a message</button>
