Some changes were made

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="Moon">
     <meta property="og:type" content="website">
     <meta property="og:description" content="I am just a student who likes to code and try new things.">
-    <meta property="og:image" content="/resources/moon.jpg">
+    <meta property="og:image" content="/resources/logo.jpg">
     <meta property="og:url" content="https://berealmoon.github.io/">
     <link rel="icon" href="/resources/icon.png" type="image/icon">
     <link rel="stylesheet" href="/styles/style.css">
@@ -17,15 +17,17 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="/resources/moon.jpg" class="logo">
+            <a href="/#">
+                <img src="/resources/logo.jpg" class="logo">
+            </a>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="/#">Home</a></li>
                 <li><a href="/aboutme.html">About me</a></li>
             </ul>
         </div>
         <div class="content">
             <h1>Welcome to the Moon's website!</h1>
-            <p>Maybe u want to add my bot to your server or you just came here for nothing?</p>
+            <p>If would you like to invite my bot click the button "Invite Akia"</p>
             <div>
                 <button type="button" onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1532736437751&scope=bot';"><span></span>Invite my bot</button>
                 <button type="button" onclick="window.location.href = 'https://discord.com/users/670986272377929743';"><span></span>My profile</button>
@@ -34,7 +36,7 @@
     </div>
     <footer>
         <div class="footer-content">
-            <h3>Here's some of my socials!</h3>
+            <h3>My socials.</h3>
             <ul class="socials">
                 <li><a href="https://discord.com/users/670986272377929743">Discord</a></li>
                 <li><a href="https://twitter.com/Nifel18">Twitter</a></li>
