added some shadows

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <a href="/#">
-                <img src="/resources/logo.jpg" class="logo">
-            </a>
+            <section class="area">
+                <div>            
+                    <a href="/#">
+                        <img src="/resources/logo.jpg" class="logo">
+                    </a>
+                </div>
+              </section>
             <ul>
                 <li><a href="/#">Home</a></li>
                 <li><a href="/aboutme.html">About me</a></li>
