--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1>Welcome to the Moon's website!</h1>
             <p>If would you like to invite my bot click the button "Invite Akia"</p>
             <div>
-                <button type="button" onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1532736437751&scope=bot';"><span></span>Invite my bot</button>
+                <button type="button" onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1532736437751&scope=bot';"><span></span>Invite Akia</button>
                 <button type="button" onclick="window.location.href = 'https://discord.com/users/670986272377929743';"><span></span>My profile</button>
             </div>
         </div>
