--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </ul>
         </div>
         <div class="footer-bottom">
-            <a href="https://discord.com/users/670986272377929743">Moon.#0254 &copy; 2022</a>
+            <a href="https://discord.com/users/670986272377929743">Moon 月#0254 &copy; 2022</a>
         </div>
     </footer>
 </body>
