--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moon</title>
+    <title>Moon | About</title>
     <meta property="og:title" content="Moon">
     <meta property="og:type" content="website">
     <meta property="og:description" content="I am just a student who likes to code and try new things.">
@@ -17,12 +17,12 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <a href="/#">
-                <img src="/resources/logo.jpg" class="logo">
-            </a>
+                <a href="https://berealmoon.github.io/">
+                    <img src="/resources/logo.jpg" class="logo">
+                </a>
             <ul>
                 <li><a href="/#">Home</a></li>
-                <li><a href="/aboutme.html">About me</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </div>
         <div class="content">
