--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moon</title>
-    <meta property="og:title" content="Moon">
+    <title>Moon | Home</title>
+    <meta property="og:title" content="Moon | Home">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="I am just a student who likes to code and try new things.">
+    <meta property="og:description" content="Moon's home page. Click the link to get some info about me.">
     <meta property="og:image" content="/resources/logo.jpg">
     <meta property="og:url" content="https://berealmoon.github.io/">
     <link rel="icon" href="/resources/icon.png" type="image/icon">
@@ -22,7 +22,7 @@
                 </a>
             <ul>
                 <li><a href="/#">Home</a></li>
-                <li><a href="/aboutme.html">About me</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </div>
         <div class="content">
