--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="banner">
@@ -22,7 +22,8 @@
                 </a>
             <ul>
                 <li><a href="/#">Home</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </div>
         <div class="content">
@@ -35,14 +36,6 @@
         </div>
     </div>
     <footer>
-        <div class="footer-content">
-            <h3>My socials.</h3>
-            <ul class="socials">
-                <li><a href="https://discord.com/users/670986272377929743">Discord</a></li>
-                <li><a href="https://twitter.com/Nifel18">Twitter</a></li>
-                <li><a href="https://www.instagram.com/be_real_moon/">Instagram</a></li>
-            </ul>
-        </div>
         <div class="footer-bottom">
             <a href="https://discord.com/users/670986272377929743">Moon 月#0254 &copy; 2022</a>
         </div>
