--- a/contact/index.html
+++ b/contact/index.html
@@ -2,10 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moon | Home</title>
-    <meta property="og:title" content="Moon | Home">
+    <title>Moon | Contact</title>
+    <meta property="og:title" content="Moon | Contact">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Moon's home page. Click the link to get some info about me.">
+    <meta property="og:description" content="Moon's contact page. Click the link to get some info about me.">
     <meta property="og:image" content="/resources/logo.jpg">
     <meta property="og:url" content="https://berealmoon.github.io/">
     <link rel="icon" href="/resources/icon.png" type="image/icon">
@@ -27,11 +27,13 @@
             </ul>
         </div>
         <div class="content">
-            <h1>Welcome to the Moon's website!</h1>
-            <p>If would you like to invite my bot click the button "Invite Akia"</p>
+            <h1>Socials and contact info</h1>
+            <p></p>
             <div>
-                <button type="button" onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1532736437751&scope=bot';"><span></span>Invite Akia</button>
-                <button type="button" onclick="window.location.href = 'https://discord.com/users/670986272377929743';"><span></span>My profile</button>
+                <button type="button" onclick="window.location.href = 'mailto:berealmoon@proton.me';"><span></span>Email</button>
+                <button type="button" onclick="window.location.href = 'https://twitter.com/Nifel18';"><span></span>Twitter</button>
+                <button type="button" onclick="window.location.href = 'https://www.instagram.com/be_real_moon/';"><span></span>Instagram</button>
+                <button type="button" onclick="window.location.href = 'https://discord.com/users/670986272377929743';"><span></span>Discord</button>
             </div>
         </div>
     </div>
