--- a/contact/index.html
+++ b/contact/index.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="banner">
         <div class="navbar">           
-                <a href="/#">
+                <a href="https://berealmoon.github.io/">
                     <img src="/resources/logo.jpg" class="logo">
                 </a>
             <ul>
