--- a/contact/index.html
+++ b/contact/index.html
@@ -10,6 +10,7 @@
     <meta property="og:url" content="https://berealmoon.github.io/">
     <link rel="icon" href="/resources/icon.png" type="image/icon">
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/scrollbar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
