--- a/index.html
+++ b/index.html
@@ -1,46 +1,44 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moon | Home</title>
+    <title>Moon's place</title>
     <meta property="og:title" content="Moon | Home">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Moon's home page. Click the link to get some info about me.">
-    <meta property="og:image" content="/resources/logo.jpg">
+    <meta property="og:description" content="A place for Moon's socials">
+    <meta property="og:image" content="/images/logo.jpg">
     <meta property="og:url" content="https://berealmoon.github.io/">
-    <link rel="icon" href="/resources/icon.png" type="image/icon">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="icon" href="/media/icon.png" type="image/icon">
+    <link rel="stylesheet" href="/styles/styles.css">
     <link rel="stylesheet" href="/styles/scrollbar.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/background.css">
+</head>
 <body>
-    <div class="banner">
-        <div class="navbar">           
-                <a href="/#">
-                    <img src="/resources/logo.jpg" class="logo">
-                </a>
-            <ul>
-                <li><a href="/#">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/contact">Contact</a></li>
-            </ul>
-        </div>
-        <div class="content">
-            <h1>Welcome to the Moon's website!</h1>
-            <p>If would you like to invite my bot click the button "Invite Akia"</p>
-            <div>
-                <button type="button" onclick="window.location.href = 'https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1532736437751&scope=bot';"><span></span>Invite Akia</button>
-                <button type="button" onclick="window.location.href = 'https://discord.com/users/670986272377929743';"><span></span>My profile</button>
-            </div>
-        </div>
+    <h1>Welcome to the my website! <3</h1>
+    <p>
+        Hello, my name is Charlie! I am just a student who likes to code and try new things..<br>My current projects are Akia and this website!<br>If u have something that I could add to my website or change, send me a mail!
+    </p>
+    <div class="custom-shape-divider-top-1654475088">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+            <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+            <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+        </svg>
     </div>
-    <footer>
-        <div class="footer-bottom">
-            <a href="https://discord.com/users/670986272377929743">Moon 月#0254 &copy; 2022</a>
-        </div>
-    </footer>
+    <div class="custom-shape-divider-bottom-1654475109">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+            <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+            <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+        </svg>
+    </div>
+    <div class="socials">
+
+        <a href="mailto:berealmoon@proton.me" style="--clr:#EA4335"><span>Send a mail</span><i></i></a>
+        <a href="https://discord.gg/tpYMjfgJvV" style="--clr:#5865F2"><span>Discord</span><i></i></a>
+        <a href="https://www.instagram.com/be_real_moon/" style="--clr:#833AB4"><span>Instagram</span><i></i></a>
+        <a href="https://www.instagram.com/be_real_moon/" style="--clr:#99AAB5"><span>My discord bot</span><i></i></a>
+    </div>
 </body>
 </html>
-
-
