--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moon's place</title>
-    <meta property="og:title" content="Moon | Home">
+    <meta property="og:title" content="Moon's place">
     <meta property="og:type" content="website">
     <meta property="og:description" content="A place for Moon's socials">
     <meta property="og:image" content="/images/logo.jpg">
