--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="mailto:berealmoon@proton.me" style="--clr:#EA4335"><span>Send a mail</span><i></i></a>
         <a href="https://discord.gg/tpYMjfgJvV" style="--clr:#5865F2"><span>Discord</span><i></i></a>
         <a href="https://www.instagram.com/be_real_moon/" style="--clr:#833AB4"><span>Instagram</span><i></i></a>
-        <a href="https://www.instagram.com/be_real_moon/" style="--clr:#99AAB5"><span>My discord bot</span><i></i></a>
+        <a href="https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1532736437751&scope=bot" style="--clr:#99AAB5"><span>My discord bot</span><i></i></a>
     </div>
 </body>
 </html>
