--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta property="og:title" content="Moon's place">
     <meta property="og:type" content="website">
     <meta property="og:description" content="A place for Moon's socials">
-    <meta property="og:image" content="/images/logo.jpg">
+    <meta property="og:image" content="/media/moon2.png">
     <meta property="og:url" content="https://berealmoon.github.io/">
-    <link rel="icon" href="/media/icon.png" type="image/icon">
+    <link rel="icon" href="/media/moon.png" type="image/icon">
     <link rel="stylesheet" href="/styles/styles.css">
     <link rel="stylesheet" href="/styles/background.css">
 </head>
