--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <h1>Welcome to the my website!</h1>
     <p>
         Hello, my name is Charlie! I am just a student who likes to code and try new things..<br>My current
-        projects are Akia and this website!<br>If u have something that I could add to my website or change,
-        send me a mail!
+        projects are Akia and this website!
     </p>
     <div class="custom-shape-divider-top-1654475088">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
