--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
             <a href="https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1532736437751&scope=bot"
                 style="--clr:#99AAB5" ><span>My discord bot</span><i></i></a>
         </div>
+        <div class="but" class="two">
+            <a href="https://github.com/LaiRoh"
+                style="--clr:#99AAB5" ><span>LaiRoh</span><i></i></a>
+        </div>
     </div>
-    <h2>
-        Big thankies <a href="https://github.com/LaiRoh">LaiRoh</a>, for adding some code to make it responsive on mobile devices!! <3
-    </h2>
 </body>
 
 </html>
