--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="https://github.com/berealmoon">
         <img src="/media/moon.png" class="logo">
     </a>
-    <h1>Welcome to the my website!</h1>
+    <h1>Welcome to my website!</h1>
     <p>
         Hello, my name is Charlie! I am just a student who likes to code and try new things.<br>My current
         projects are Akia and this website!<br>Also big thankies to LaiRoh for helping me with making this website responsive.
