--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>Welcome to my website!</h1>
     <p>
         Hello, my name is Charlie! I am just a student who likes to code and try new things.<br>My current
-        projects are Akia and this website!<br>Also big thankies to LaiRoh for helping me with making this website responsive.
+        projects are Akia and this website!<br>Also, big thankies to LaiRoh for helping me with making this website responsive.
     </p>
     <div class="custom-shape-divider-top-1654475088">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
