--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 style="--clr:#fc1212" ><span>LaiRoh</span><i></i></a>
         </div>
         <div class="but" class="one">
-            <a href="https://discord.gg/tpYMjfgJvV" style="--clr:#5865F2" ><span>Discord</span><i></i></a>
+            <a href="https://www.youtube.com/anmmusic" style="--clr:#ff5252" ><span>Youtube</span><i></i></a>
         </div>
         <div class="but" class="two">
             <a href="https://www.instagram.com/be_real_moon/" style="--clr:#833AB4" ><span>Instagram</span><i></i></a>
