--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="https://www.instagram.com/be_real_moon/" style="--clr:#833AB4" ><span>Instagram</span><i></i></a>
         </div>
         <div class="but" class="one">
-            <a href="mailto:berealmoon@proton.me" style="--clr:#EA4335"  ><span>Send a mail</span><i></i></a>
+            <a href="mailto:berealmoon@proton.me" style="--clr:#ffa552"  ><span>Send a mail</span><i></i></a>
         </div>
         <div class="but" class="two">
             <a href="https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1532736437751&scope=bot"
