--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href="mailto:berealmoon@proton.me" style="--clr:#ffa552"  ><span>Send a mail</span><i></i></a>
         </div>
         <div class="but" class="two">
-            <a href="https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1532736437751&scope=bot"
+            <a href="https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1541892603383&scope=applications.commands%20bot"
                 style="--clr:#b081f7" ><span>My discord bot</span><i></i></a>
         </div>
     </div>
