--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <a href="https://github.com/berealmoon">
-        <img src="/media/moon.png" class="logo">
+        <img src="/media/Moonsavatar.png" class="logo">
     </a>
     <h1>Welcome to my website!</h1>
     <p>
