--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <span class="frame"><img src="/media/moonavatar.jpg" alt=""></span>
                         </div>
                         <h1 id="text01" class="style2" style="opacity: 1; transform: none;">Moon.</h1>
-                        <p id="text16" class="style4" style="opacity: 1;">Hi, my name is Charlie (Karol). I am just a student who likes to code things, playing games and post shits on discord servers!</p>
+                        <p id="text16" class="style4" style="opacity: 1;">Hi, my name is Charlie (Karol). I am just a student who likes to code things, play games and post useless shit on discord servers!</p>
                         <ul id="icons02" class="style1 icons" style="opacity: 1; transform: none;">
                             <li>
                                 <a class="n01" href="#start">
