--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="wrapper">
                     <div class="inner" data-onvisible-trigger="1">
                         <div id="image04" class="style1 image" style="opacity: 1; transform: none;">
-                            <span class="frame"><img src="/media/moonavatar.jpg" alt=""></span>
+                            <span class="frame"><img src="/media/moonavatar.gif" alt=""></span>
                         </div>
                         <h1 id="text01" class="style2" style="opacity: 1; transform: none;">Moon.</h1>
                         <p id="text16" class="style4" style="opacity: 1;">Hi, my name is Charlie (Karol). I am just a student who likes to code things, play games and post useless shit on discord servers!</p>
@@ -104,7 +104,7 @@
                         <div>
                             <div id="image01" class="style3 image" data-position="center">
                                 <span class="frame">
-                                    <img src="/media/akuwu.jpg" alt="" style="transform: none;"></span>
+                                    <img src="/media/akuwu.gif" alt="" style="transform: none;"></span>
                                 </div>
                             </div>
                         </div>
