--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html data-lt-installed="true" lang="en">
+<html>
 
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moon's place</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="Moon's website! Click for more.">
-    <meta property="og:site_name" content="Moon's place">
-    <meta property="og:title" content="Moon's place">
+    <meta property="og:title" content="Moon">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Moon's website! Click for more.">
+    <meta property="og:description" content="Moon's website. Open for more">
+    <meta property="og:image" content="/media/moon.png">
     <meta property="og:url" content="https://berealmoon.ga">
     <link rel="icon" href="/media/moon.png" type="image/icon">
     <link href="/styles/style.css" rel="stylesheet" type="text/css">
