--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="icon" href="/media/moon.png" type="image/icon">
     <link href="/styles/style.css" rel="stylesheet" type="text/css">
     <link href="/styles/style2.css" rel="stylesheet" type="text/css">
+    <link href="/styles/background.css" rel="stylesheet" type="text/css">
 </head>
-
 <body class="is-ready">
     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xlink="http://www.w3.org/1999/xlink" viewBox="0 0 40 40" display="none" width="0" height="0">
         <symbol id="icon-90a" viewBox="0 0 40 40">
@@ -153,6 +153,7 @@
                     </div>
                 </div>
             </div>
+
 </body>
 
 <script>
