--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <p id="text05" class="style4" style="opacity: 1;">Simple almost multipurpose bot with Basic, Moderation, Anime and Fun commands.</p>
                             <ul id="buttons02" class="style1 buttons" style="opacity: 1; transform: none;">
                                 <li>
-                                    <a href="https://discord.com/api/oauth2/authorize?client_id=948968423898116106&amp;permissions=1541892603383&amp;scope=applications.commands%20bot" class="button n01">
+                                    <a href="https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1516056734966&scope=bot" class="button n01">
                                         <svg>
                                             <use xlink:href="#icon-a3b"></use>
                                         </svg>
