--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <span class="frame"><img src="/media/moonavatar.gif" alt=""></span>
                         </div>
                         <h1 id="text01" class="style2" style="opacity: 1; transform: none;">Moon.</h1>
-                        <p id="text16" class="style4" style="opacity: 1;">Hi, my name is Charlie (Karol). I am just a student who likes to code things, play games and post useless shit on discord servers!</p>
+                        <p id="text16" class="style4" style="opacity: 1;">Hi, my name is Charlie (Karol). A student who likes to code things, currently I am learning html, css, python and javascript. Also I play games as everyone, sometimes I make visualizations in after effects, which you can check on my channel. <a href="#end">"Click here."</a></p>
                         <ul id="icons02" class="style1 icons" style="opacity: 1; transform: none;">
                             <li>
                                 <a class="n01" href="#start">
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <hr id="divider01" class="style1">
-                <div id="container05" class="style3 container default">
+                <div id="container05" data-scroll-id="end" class="style3 container default">
                     <div class="wrapper">
                         <div class="inner" data-onvisible-trigger="1">
                             <h2 id="text04" class="style1" style="opacity: 1; transform: none;">Socials &amp; Contact</h2>
