--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <span class="frame"><img src="/media/moonavatar.gif" alt=""></span>
                         </div>
                         <h1 id="text01" class="style2" style="opacity: 1; transform: none;">Moon.</h1>
-                        <p id="text16" class="style4" style="opacity: 1;">Hi, my name is Charlie (Karol). A student who likes to code things, currently I am learning html, css, python and javascript. Also I play games as everyone, sometimes I make visualizations in after effects, which you can check on my channel. <a href="#end">"Click here."</a></p>
+                        <p id="text16" class="style4" style="opacity: 1;">Hi, my name is Charlie (Karol). I am just student who likes to code things, currently I am learning html, css, python and javascript. Also I play games as everyone, sometimes I make visualizations in after effects, which you can check on my channel. <a href="#end">"Click here."</a></p>
                         <ul id="icons02" class="style1 icons" style="opacity: 1; transform: none;">
                             <li>
                                 <a class="n01" href="#start">
