--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="inner" data-onvisible-trigger="1" data-reorder="1,0">
                         <div>
                             <p id="text02" class="style3" style="opacity: 1; transform: none;">My current project</p>
-                            <h2 id="text03" class="style1" style="opacity: 1; transform: none;">Akuwu, the useless bot</h2>
+                            <h2 id="text03" class="style1" style="opacity: 1; transform: none;">Yuno, the useless bot</h2>
                             <p id="text05" class="style4" style="opacity: 1;">Simple almost multipurpose bot with Basic, Moderation, Anime and Fun commands.</p>
                             <ul id="buttons02" class="style1 buttons" style="opacity: 1; transform: none;">
                                 <li>
@@ -94,7 +94,7 @@
                                         <svg>
                                             <use xlink:href="#icon-a3b"></use>
                                         </svg>
-                                        <span class="label">Invite Akuwu</span>
+                                        <span class="label">Invite Yuno</span>
                                     </a>
                                 </li>
                             </ul>
@@ -102,7 +102,7 @@
                         <div>
                             <div id="image01" class="style3 image" data-position="center">
                                 <span class="frame">
-                                    <img src="/media/akuwu.gif" alt="" style="transform: none;"></span>
+                                    <img src="/media/yuno.png" alt="" style="transform: none;"></span>
                                 </div>
                             </div>
                         </div>
