--- a/discord/index.html
+++ b/discord/index.html
@@ -2,6 +2,6 @@
 <html>
     <head>
         <title>Moon's place | Discord</title>
-        <meta http-equiv = "refresh" content = "0; url = https://youtube.com/anmmusic" />
+        <meta http-equiv = "refresh" content = "0; url = https://discord.gg/tpYMjfgJvV" />
     </head>
 </html>
