--- a/discord/index.html
+++ b/discord/index.html
@@ -3,5 +3,10 @@
     <head>
         <title>Moon's place | Discord</title>
         <meta http-equiv = "refresh" content = "0; url = https://discord.gg/tpYMjfgJvV" />
+        <meta property="og:title" content="Discord">
+        <meta property="og:type" content="website">
+        <meta property="og:description" content="Moon's discord server!">
+        <meta property="og:image" content="/media/discord.png">
+        <meta property="og:url" content="https://discord.gg/tpYMjfgJvV">
     </head>
 </html>
