--- a/instagram/index.html
+++ b/instagram/index.html
@@ -3,5 +3,10 @@
     <head>
         <title>Moon's place | Instagram</title>
         <meta http-equiv = "refresh" content = "0; url = https://www.instagram.com/be_real_moon/" />
+        <meta property="og:title" content="Instagram">
+        <meta property="og:type" content="website">
+        <meta property="og:description" content="Moon's instagram!">
+        <meta property="og:image" content="/media/instagram.png">
+        <meta property="og:url" content="https://www.instagram.com/be_real_moon/">
     </head>
 </html>
