--- a/invite/index.html
+++ b/invite/index.html
@@ -3,5 +3,10 @@
     <head>
         <title>Moon's place | Invite Yuno</title>
         <meta http-equiv = "refresh" content = "0; url = https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1516056734966&scope=bot" />
+        <meta property="og:title" content="Yuno">
+        <meta property="og:type" content="website">
+        <meta property="og:description" content="Invite Yuno, another useless discord bot!">
+        <meta property="og:image" content="/media/yuno.png">
+        <meta property="og:url" content="https://discord.com/api/oauth2/authorize?client_id=948968423898116106&permissions=1516056734966&scope=bot">
     </head>
 </html>
