--- a/youtube/index.html
+++ b/youtube/index.html
@@ -3,5 +3,10 @@
     <head>
         <title>Moon's place | Youtube</title>
         <meta http-equiv = "refresh" content = "0; url = https://youtube.com/anmmusic" />
+        <meta property="og:title" content="Youtube">
+        <meta property="og:type" content="website">
+        <meta property="og:description" content="Moon's youtube channel!">
+        <meta property="og:image" content="/media/youtube.png">
+        <meta property="og:url" content="https://youtube.com/anmmusic">
     </head>
 </html>
