--- a/instagram/index.html
+++ b/instagram/index.html
@@ -6,7 +6,7 @@
         <meta property="og:title" content="Instagram">
         <meta property="og:type" content="website">
         <meta property="og:description" content="Moon's instagram!">
-        <meta property="og:image" content="/media/instagram.png">
+        <meta property="og:image" content="/media/instagram.jpg">
         <meta property="og:url" content="https://www.instagram.com/be_real_moon/">
     </head>
 </html>
