--- a/youtube/index.html
+++ b/youtube/index.html
@@ -6,7 +6,7 @@
         <meta property="og:title" content="Youtube">
         <meta property="og:type" content="website">
         <meta property="og:description" content="Moon's youtube channel!">
-        <meta property="og:image" content="/media/youtube.png">
+        <meta property="og:image" content="/media/youtube.jpg">
         <meta property="og:url" content="https://youtube.com/anmmusic">
     </head>
 </html>
